Update metrics implementation to be vendor dependecy free
